# DeployForge

./: .editorconfig  .flake8  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BACKEND_INTEGRATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MD_REVIEW.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ENHANCEMENT_PLAN.md  CONTRIBUTING.md  CURRENT_STATE.md  CURRENT_STATUS.md  DEVELOPMENT.md  Dockerfile  ENTERPRISE_GUIDE.md  EXAMPLES_INDEX.md  FAQ.md  FEATURE_SPRINT_PLAN.md  FORWARD_PLAN.md  GITHUB_RELEASE.md  GITHUB_RELEASE_v0.3.0.md  GUI_COMPLETION_PLAN.md  GUI_DESIGN.md  GUI_ENHANCEMENT_SUMMARY.md  GUI_GUIDE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS_v0.4.0.md  INSTALLATION.md  INTEGRATION_COMPLETE_SESSION.md  LICENSE  MANIFEST.in  MASTER_PLAN.md  MIGRATION_PLAN.md  MILESTONES.md  MODULES_6-9_ENHANCEMENT_COMPLETE.md  MODULE_ENHANCEMENT_SUMMARY.md  MODULE_REFERENCE.md  (+33 more)
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/actions/: README.md
.github/workflows/: ci-build.yml  ci.yml  desktop-ci.yml  option-b-ci.yml  release.yml  tests.yml
Backend/DeployForge/: DeployForge.psd1  DeployForge.psm1
Backend/DeployForge/Public/: Dismount-DeployImage.ps1  Get-DeployImageInfo.ps1  Mount-DeployImage.ps1  New-ImageBuild.ps1
DeployForge-Native/: DeployForge.sln  README.md
DeployForge-Native/DeployForge.App/: App.xaml  App.xaml.cs  DeployForge.App.csproj  app.manifest
DeployForge-Native/DeployForge.App/Assets/: .gitkeep
DeployForge-Native/DeployForge.App/Converters/: Converters.cs
DeployForge-Native/DeployForge.App/Models/: AppSettings.cs  BuildConfiguration.cs  ImageInfo.cs  Profile.cs
DeployForge-Native/DeployForge.App/Services/: IDialogService.cs  IImageService.cs  INavigationService.cs  IPowerShellService.cs  IProfileService.cs  ISettingsService.cs  IThemeService.cs
DeployForge-Native/DeployForge.App/Themes/: AppTheme.xaml
DeployForge-Native/DeployForge.App/ViewModels/: AnalyzeViewModel.cs  BuildViewModel.cs  MainViewModel.cs  ProfilesViewModel.cs  SettingsViewModel.cs  WelcomeViewModel.cs
DeployForge-Native/DeployForge.App/Views/: AnalyzePage.xaml  AnalyzePage.xaml.cs  BuildPage.xaml  BuildPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProfilesPage.xaml  ProfilesPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  WelcomePage.xaml  WelcomePage.xaml.cs
DeployForge-Native/DeployForge.PowerShell/: DeployForge.psd1  DeployForge.psm1
DeployForge-Native/DeployForge.PowerShell/Core/: BaseHandler.ps1  Exceptions.ps1  ImageManager.ps1
DeployForge-Native/DeployForge.PowerShell/Features/: Batch.ps1  Browsers.ps1  Debloat.ps1  DevEnvironment.ps1  WinPE.ps1  (+7 more)
benchmarks/: bench_ui_customization.py
config/: appsettings.json
docs/: BACKEND_IMPLEMENTATION_PLAN.md  DEVELOPMENT_SETUP.md  OPTION_B_FEATURES.md  SECURITY_AUDIT_OPTION_B.md  WEBHOOK_SIGNATURE_VERIFICATION.md  architecture.md  conf.py  index.md  security.md
docs/user-guide/: CONFIGURATION_GUIDE.md  GETTING_STARTED.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: basic_usage.py  deployment_winpe.py  enhanced_modules_examples.py  enterprise_deployment.py  enterprise_workstation.py  gaming_pc_build.py  multilingual_image.py  templates_example.py  windows11_custom.py
native/: README.md
powershell/: README.md
src/backend/: DeployForge.sln
src/deployforge/: __init__.py  ai.py  app_catalog.py  applications.py  audit.py  automation.py  backup.py  batch.py  browsers.py  cache.py  certificates.py  cli.py  cloud.py  comparison.py  config.py  config_manager.py  containers.py  creative.py  debloat.py  devenv.py  differential.py  drivers.py  encryption.py  feature_updates.py  features.py  gaming.py  gpo.py  gui.py  gui_modern.py  iac.py  installer.py  integration.py  languages.py  launchers.py  network.py  optimizer.py  packages.py  partitions.py  performance.py  portable.py  (+18 more)
src/frontend/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
src/powershell/: DeployForge.psd1  DeployForge.psm1
src/tui/: index.js  package.json
tests/: __init__.py  conftest.py  test_audit.py  test_backup.py  test_batch.py  test_cache.py  test_config.py  test_image_manager.py  test_installer.py  test_languages.py  test_partitions.py  test_portable.py  test_services.py  test_templates.py  test_ui_customization.py  test_unattend.py  test_updates_control.py  test_wizard.py
tests/powershell/: Image.Tests.ps1
vscode-extension/: README.md  package.json
workflows/templates/: developer-workstation.yaml  enterprise-hardened.yaml  gaming-optimized.yaml  minimal-tiny11.yaml
(+284 files in other folders)
