[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deployforge"
version = "2.0.0"
description = "Enterprise Windows Deployment Suite - 150+ features, 9 enhanced modules"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "DeployForge Contributors"}]

dependencies = [
    "PyQt6>=6.5.0",
    "requests>=2.31.0",
]

[project.scripts]
deployforge = "deployforge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=deployforge --cov-report=html"
